--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ajv": "^6.2.1",
     "compression": "^1.7.2",
     "cors": "^2.8.4",
+    "feathers-errors": "^2.9.2",
     "feathers-memory": "^2.1.1",
     "feathers-nedb": "^3.0.0",
     "feathers-nedb-fuzzy-search": "^1.1.1",
